@@ -1,6 +1,8 @@
 <?php /* $Id$ */ ?>
-<?php
-	require("../config.php");
+<?php 
+require("../config.php"); 
+require("../util.php");
+emulate_gettext();
 ?>
 <html>
     <head>
