@@ -1,3 +1,7 @@
+2003-08-08  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b106
+	
+	* Fixed bug in diagnositics so it will run without gettext defined.
+
 2003-08-08  Bharat Mediratta  <bharat@menalto.com> 1.3.5-cvs-b105
 
 	* Cleaned up warnings and minor errors in the setup diagnostics
